Fixed classes for third task

--- a/Task3/src/style/partials/components/global.scss
+++ b/Task3/src/style/partials/components/global.scss
@@ -3,6 +3,8 @@ body {
 	font-family: "Arial", "Helvetica CY", "Nimbus Sans L", sans-serif;
 	font-size: 12px;
 	color: $body-txt;
+	margin: 0;
+	padding: 0;
 }
 * {
 	box-sizing: border-box;
